--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
 
   #Got these for streaming support
   frideos: ^0.6.1
+  #injection support
+  #states_rebuilder: ^1.10.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
