--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: RookFlutter
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+152
 
 environment:
   sdk: ">=2.3.0 <3.0.0"
@@ -29,6 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
+
+  #for db stuff
+  sqflite: ^1.2.0
+  path_provider: ^1.5.1
+
+  #http
+  http: ^0.12.0+4
 
 dev_dependencies:
   flutter_test:
