a bunch of things

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: RookFlutter
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+152
+version: 1.12.13+hotfix.8
 
 environment:
   sdk: ">=2.3.0 <3.0.0"
@@ -36,6 +36,12 @@ dependencies:
 
   #http
   http: ^0.12.0+4
+
+  # Permissions
+  permission_handler: ^4.2.0+hotfix.3
+
+  #keep screen awake
+  screen: ^0.0.5
 
 dev_dependencies:
   flutter_test:
